hphp/hack/test/typecheck/references/refs_in_array/intrinsic.php.exp
File "intrinsic.php", line 5, characters 12-14:
Arrays cannot contain references. (Typing[4225])
